css/base.css
/* ... */
strong{
  font-weight:bold;
}

a{
  color:#2382c8;
  text-decoration:none;
}
a:visited{
  color:#457289;
}
a:hover{
  text-decoration:underline;
}

hr{
  margin:15px 0;
  height:1px;
  padding:none;
  background:#ddd;
  border:none;
}

.sidebar{
  float:left;
  padding:0 40px 0 30px;
  width:240px;
}
.main{
  float:left;
  padding-bottom:50px;
  width:560px;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Sidebar
------------------------------------------------------------------------------*/

.logo{
  display:block;
  margin:20px 0;
}

ul.nav{
  margin:20px 0;
  border-top:1px solid #ddd;
}
ul.nav li{
  list-style-type:none;
  margin:0;
  padding:8px 0;
  border-bottom:1px solid #ddd;
}
ul.nav li a{
  color:#333;
  font-weight:bold;
  text-decoration:none;
}
ul.nav li a:hover{
  color:#000;
}

.sidebar p{
  color:#666;
  line-height:1.5;
}

.fusion{
  margin-top:60px;
  font-size:11px;
}
.fusion a{
  color:#666;
}
.fusion .fusiontext{
  display:block;
  margin-top:5px;
  line-height:1.5;
  font-family:Georgia, Garamond, Times;
  font-style:italic;
}
.fusion p.note{
  margin:5px 0;
  font-size:10px;
}
.fusion p.note a{
  color:#333;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Home Page
------------------------------------------------------------------------------*/

.listing .post{
  margin:40px 0;
}
.listing .post:first-child{
  margin-top:22px;
}

.listing .post p.date{
  margin:0 0 -1px 0;
}

.listing .post h2{
  margin:0 0 -5px 0;
  font-size:18px;
  border:none;
}
.listing .post h2 a{
  color:#222;
  text-decoration:none;
}

.listing .post .continue{
  font-weight:bold;
}

.listing .post.other{
  margin-left:24px;
  padding-left:10px;
  color:#666;
  border-left:1px solid #ddd;
}
.listing .post.other h2{
  margin-bottom:-3px;
  font-size:14px;
  line-height:14px;
}
.listing .post.other p:last-child{
  margin-bottom:0;
}

.listing .post.other .icon{
  float:left;
  margin-left:-35px;
  width:20px;
  height:20px;
}
.listing .post.link .icon{
  background:url(/images/icon_link.png) 0 0 no-repeat;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Post Styles
------------------------------------------------------------------------------*/

.main{
  color:#444;
  line-height:21px;
}

.main p.date{
  color:#666;
  margin:20px 0 -20px 0;
}

h1{
  margin:20px 0 10px 0;
  font-size:20px;
  color:#000;
}

h2{
  margin:2.0em 0 -0.5em 0;
  font-size:16px;
  color:#000;
  border-bottom:1px dotted #BBB;
}

h3{
  margin:2.0em 0 -0.75em 0;
  font-size:13px;
  color:#000;
}
h3 a, h3 a:visited, h2 a, h2 a:visited{ color:#000; }
h3 a:hover, h2 a:hover{ color:#000; border:none; }

h4{
  font-size:1em;
  font-weight:normal;
  color:#000;
}

.figure{
  margin:19px 0 1em 0;
  padding:2px;
  text-align:center;
  border:1px solid #ddd;
  background:#f5f5f5;
  line-height:0;
}
.fig-a{
  float:right;
  margin-left:15px;
}
.figure small{
  margin:2px 0 0 0;
  padding:5px 7px;
  display:block;
  font-size:11px;
  line-height:12px;
  text-align:left;
  color:#666;
  background:#ddd;
  text-shadow:1px 1px 0 rgba(255,255,255,0.3);
}
.figure small strong{
  text-transform:uppercase;
}

blockquote{
  margin:1em 0;
  padding:0 35px;
  font-size:14px;
  border:1px dotted #ddd;
  border-left:none;
  border-right:none;
  background:url(../images/blockquote_open.gif) 0 12px no-repeat;
}
blockquote p{
  margin:12px 0;
  color:#666;
}

table{
	width:100%;
	border-top:1px solid #CCCCCC;
	border-bottom:2px solid #CCC;
	color:#000000;
	background:#FFFFFF;
	border-collapse:separate;
	font-size:11px;
}
caption{
	padding:10px 10px 5px 0;
	text-align:left;
	font-size:11px;
	text-transform:uppercase;
	font-weight:bold;
}
th{
	text-align:center;
	padding:5px;
}
td{
	text-align:center;
	padding:3px 5px;
}
.odd td{
	background:#F0F1F2;
}
table.data th, table.data td{
  text-align:left;
}

.main ul, .main ol{
  margin:16px 0;
}
.main ul li{
  list-style-type:none;
  margin-left:10px;
  margin-bottom:5px;
  padding-left:15px;
  background:url(../images/icon_li.gif) 0 5px no-repeat;
}
.main ol li{
  margin-left:32px;
  margin-bottom:5px;
}

a.askme{
  display:block;
  padding:10px 12px;
  font-size:14px;
  text-decoration:none;
  color:#666;
  background:#eee;
  -webkit-border-radius:5px;
  -moz-border-radius:5px;
  border-radius:5px;
}
a.askme strong{
  color:#000;
}
a.askme:hover strong{
  text-decoration:underline;
}

p.note{
  color:#666;
}

/* @end */

/*----------------------------------------------------------------------------
  @group Follow Box
----------------------------------------------------------------------------*/

.follow-box{
  display:block;
  margin:35px 0 10px 0;
  background:#f6fbff;
  text-shadow:0 0 1px rgba(255,255,255,0.6);
  filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#f6fbff', endColorstr='#d5e8f5');
  background:-webkit-gradient(linear, left top, left bottom, from(#f6fbff), to(#d5e8f5));
  background:-moz-linear-gradient(top,  #f6fbff,  #d5e8f5);
  border:1px solid #c3e0f2;
  -webkit-border-radius:4px;
  -moz-border-radius:4px;
  border-radius:4px;
}
a.follow-box{
  text-decoration:none;
}
/* ... */

